--- a/package.json
+++ b/package.json
@@ -23,16 +23,18 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-cli": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
     "babelify": "^7.3.0",
-    "browserify": "^14.4.0",
     "eslint": "^3.19.0",
     "fs-extra": "^3.0.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^3.0.1",
-    "gulp-jshint": "^2.0.4",
-    "jshint": "^2.9.4",
-    "vinyl-source-stream": "^1.1.0"
+    "gulp-webpack": "^1.5.0",
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^2.6.1"
   }
 }
